fix(main): overflow x issues on mobile

--- a/src/app/[locale]/page.module.css
+++ b/src/app/[locale]/page.module.css
@@ -1,7 +1,6 @@
-/* TODO re-add this line and remove position:sticky on .controlsBar if we have issues with slider on mobile */
-/* .main {
-    overflow-x: hidden;
-} */
+.main {
+    overflow-x: clip;
+}
 
 .main section {
     padding: 1.25rem;
@@ -15,10 +14,12 @@
 
 .firstSection {
     min-height: calc(100vh - var(--header-height));
+    box-sizing: border-box;
+    display: flex;
 }
 
 .firstSectionContainer {
-    height: 100%;
+    flex-grow: 1;
 }
 
 .firstSectionLeftBlock {
